--- a/index.html
+++ b/index.html
@@ -554,7 +554,7 @@
                     <div class="tool-content">
                         <h3>Image Compressor</h3>
                         <p>Reduce image file size without losing quality.</p>
-                        <a href="#" class="tool-link">Use Tool <i class="fas fa-arrow-right"></i></a>
+                        <a href="tools/img-compresed.html" class="tool-link">Use Tool <i class="fas fa-arrow-right"></i></a>
                     </div>
                 </div>
                 
