--- a/index.html
+++ b/index.html
@@ -532,7 +532,7 @@
         <div class="ad-container">
             <div class="ad-placeholder">
                 <!-- Replace with your Google AdSense code -->
-                Ad Space (320x100)
+              ca-app-pub-7007504362603856/6091167913
             </div>
         </div>
     </div>
@@ -622,7 +622,7 @@
         <div class="ad-container">
             <div class="ad-placeholder">
                 <!-- Replace with your Google AdSense code -->
-                Ad Space (320x100)
+               ca-app-pub-7007504362603856/6091167913
             </div>
         </div>
     </div>
