--- a/index.html
+++ b/index.html
@@ -532,7 +532,20 @@
         <div class="ad-container">
             <div class="ad-placeholder">
                 <!-- Replace with your Google AdSense code -->
-              ca-app-pub-7007504362603856/6091167913
+           <div class="ad-size">Responsive Ad (728x90)</div>
+                        <!-- Google AdSense Banner Ad Code -->
+                        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-app-pub-7007504362603856/6091167913" crossorigin="anonymous"></script>
+                        <!-- Responsive Banner Ad -->
+                        <ins class="adsbygoogle"
+                             style="display:block"
+                             data-ad-client="ca-pub-your-ad-client-id"
+                             data-ad-slot="your-ad-slot-id"
+                             data-ad-format="auto"
+                             data-full-width-responsive="true"></ins>
+                        <script>
+                             (adsbygoogle = window.adsbygoogle || []).push({});
+                        </script>
+                    </div>
             </div>
         </div>
     </div>
@@ -622,7 +635,20 @@
         <div class="ad-container">
             <div class="ad-placeholder">
                 <!-- Replace with your Google AdSense code -->
-               ca-app-pub-7007504362603856/6091167913
+             <div class="ad-size">Responsive Ad (728x90)</div>
+                        <!-- Google AdSense Banner Ad Code -->
+                        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-app-pub-7007504362603856/6091167913" crossorigin="anonymous"></script>
+                        <!-- Responsive Banner Ad -->
+                        <ins class="adsbygoogle"
+                             style="display:block"
+                             data-ad-client="ca-pub-your-ad-client-id"
+                             data-ad-slot="your-ad-slot-id"
+                             data-ad-format="auto"
+                             data-full-width-responsive="true"></ins>
+                        <script>
+                             (adsbygoogle = window.adsbygoogle || []).push({});
+                        </script>
+                    </div>
             </div>
         </div>
     </div>
