--- a/index.html
+++ b/index.html
@@ -508,9 +508,9 @@
     
     <nav id="navMenu">
         <ul>
-            <li><a href="#"><i class="fas fa-home"></i> Home</a></li>
+            <li><a href="img-compresed.html"><i class="fas fa-home"></i> Home</a></li>
             <li><a href="#"><i class="fas fa-image"></i> Image Tools</a></li>
-            <li><a href="#"><i class="fas fa-file-pdf"></i> PDF Tools</a></li>
+            <li><a href="pdf-compresed.html"><i class="fas fa-file-pdf"></i> PDF Tools</a></li>
             <li><a href="#"><i class="fas fa-dollar-sign"></i> Pricing</a></li>
             <li><a href="#"><i class="fas fa-envelope"></i> Contact</a></li>
             <li><a href="#"><i class="fas fa-user"></i> Login/Signup</a></li>
@@ -588,7 +588,7 @@
                     <div class="tool-content">
                         <h3>PDF Compressor</h3>
                         <p>Reduce the size of your PDF files.</p>
-                        <a href="#" class="tool-link">Use Tool <i class="fas fa-arrow-right"></i></a>
+                        <a href="pdf-compresed.html" class="tool-link">Use Tool <i class="fas fa-arrow-right"></i></a>
                     </div>
                 </div>
                 
