--- a/index.html
+++ b/index.html
@@ -511,7 +511,7 @@
             <li><a href="img-compresed.html"><i class="fas fa-home"></i> Home</a></li>
             <li><a href="#"><i class="fas fa-image"></i> Image Tools</a></li>
             <li><a href="pdf-compresed.html"><i class="fas fa-file-pdf"></i> PDF Tools</a></li>
-            <li><a href="va-call.html"><i class="fas fa-dollar-sign"></i> VC Call</a></li>
+            <li><a href="vc-call.html"><i class="fas fa-dollar-sign"></i> VC Call</a></li>
             <li><a href="#"><i class="fas fa-envelope"></i> Contact</a></li>
             <li><a href="#"><i class="fas fa-user"></i> Login/Signup</a></li>
         </ul>
